--- a/css/clock.css
+++ b/css/clock.css
@@ -1,16 +1,35 @@
 body {
     background-color: #a6c6bc;
+    width: 100%;
 }
 
 .container {
     background-color: #ef7442;
-    width: 300px;
+    width: 40%;
     border-radius: 6px;
     box-shadow: 0px 1px 8px rgba(0, 0, 0, .4);
     border: 1px solid #d35726;
     position: relative;
     margin: 0 auto;
     margin-top: 100px;
+}
+
+@media (max-width: 650px) {
+    .container {
+        width: 55%;
+    }
+}
+
+@media (min-width: 960px) {
+    .container {
+        width: 30%;
+    }
+}
+
+@media (min-width: 1250px) {
+    .container {
+        width: 25%;
+    }
 }
 
 .time-section {
